--- a/index.html
+++ b/index.html
@@ -54,6 +54,37 @@
       padding: 10px;
       box-sizing: border-box;
       overflow-y: auto;
+      transition: all 0.3s ease;
+      position: relative;
+    }
+
+    .sidebar.collapsed {
+      width: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+
+    /* 折疊按鈕 */
+    .collapse-btn {
+      position: absolute;
+      right: -15px;
+      top: 10px;
+      z-index: 10;
+      width: 30px;
+      height: 30px;
+      background-color: #2c3e50;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s ease;
+    }
+
+    .collapse-btn:hover {
+      background-color: #34495e;
     }
 
     /* 右側 iframe */
@@ -79,7 +110,10 @@
   <!-- 主體區域 -->
   <div class="main">
     <!-- 左側選單 -->
-    <div class="sidebar">
+    <div class="sidebar" :class="{ collapsed: isCollapsed }">
+      <button class="collapse-btn" @click="toggleSidebar">
+        <el-icon><d-arrow-left v-if="!isCollapsed" /><d-arrow-right v-else /></el-icon>
+      </button>
       <el-menu
         default-active="1-1"
         class="el-menu-vertical-demo"
@@ -142,6 +176,11 @@ const Icons = ElementPlusIconsVue;
 const app = createApp({
   setup() {
     const iframeUrl = ref('https://color-powder-app.streamlit.app/#recipe-table');
+    const isCollapsed = ref(false);
+
+    const toggleSidebar = () => {
+      isCollapsed.value = !isCollapsed.value;
+    };
 
     const handleSelect = (index) => {
       switch(index){
@@ -162,7 +201,7 @@ const app = createApp({
       }
     };
 
-    return { iframeUrl, handleSelect };
+    return { iframeUrl, handleSelect, isCollapsed, toggleSidebar };
   }
 });
 
