--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       display: flex;
       flex: 1;
       overflow: hidden;
+      position: relative;
     }
 
     /* 左側功能列 */
@@ -55,7 +56,6 @@
       box-sizing: border-box;
       overflow-y: auto;
       transition: all 0.3s ease;
-      position: relative;
     }
 
     .sidebar.collapsed {
@@ -67,11 +67,11 @@
     /* 折疊按鈕 */
     .collapse-btn {
       position: absolute;
-      right: -15px;
+      left: 240px;
       top: 10px;
-      z-index: 10;
-      width: 30px;
-      height: 30px;
+      z-index: 1000;
+      width: 32px;
+      height: 32px;
       background-color: #2c3e50;
       color: white;
       border: none;
@@ -80,7 +80,12 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: all 0.3s ease;
+      transition: left 0.3s ease;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    }
+
+    .collapse-btn.collapsed {
+      left: 10px;
     }
 
     .collapse-btn:hover {
@@ -109,11 +114,13 @@
 
   <!-- 主體區域 -->
   <div class="main">
+    <!-- 折疊按鈕（移到 main 內） -->
+    <button class="collapse-btn" :class="{ collapsed: isCollapsed }" @click="toggleSidebar">
+      <el-icon><d-arrow-left v-if="!isCollapsed" /><d-arrow-right v-else /></el-icon>
+    </button>
+
     <!-- 左側選單 -->
     <div class="sidebar" :class="{ collapsed: isCollapsed }">
-      <button class="collapse-btn" @click="toggleSidebar">
-        <el-icon><d-arrow-left v-if="!isCollapsed" /><d-arrow-right v-else /></el-icon>
-      </button>
       <el-menu
         default-active="1-1"
         class="el-menu-vertical-demo"
