--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     /* 左側功能列 */
     .sidebar {
       width: 250px;
-      background-color: #f5f5f5;
+      background-color: #2c3e50;
       padding: 10px;
       box-sizing: border-box;
       overflow-y: auto;
@@ -125,8 +125,8 @@
         default-active="1-1"
         class="el-menu-vertical-demo"
         @select="handleSelect"
-        background-color="#f5f5f5"
-        text-color="#000000"
+        background-color="#2c3e50"
+        text-color="#ffffff"
         active-text-color="#dbd818"
       >
         <!-- 色粉管理 -->
