--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ const Icons = ElementPlusIconsVue;
 
 const app = createApp({
   setup() {
-    const iframeUrl = ref('https://color-powder-app.streamlit.app/');
+    const iframeUrl = ref('https://color-powder-app.streamlit.app/?menu=生產單管理');
     const isCollapsed = ref(false);
 
     const toggleSidebar = () => {
@@ -201,16 +201,16 @@ const app = createApp({
         case '2-1': iframeUrl.value = baseUrl + '?menu=客戶名單'; break;
         case '2-2': iframeUrl.value = baseUrl + '?menu=配方管理'; break;
         case '3-1': iframeUrl.value = baseUrl + '?menu=生產單管理'; break;
-        case '3-2': iframeUrl.value = baseUrl + '?menu=代工排程'; break;
+        case '3-2': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 暫時導向生產單
         case '4-1': iframeUrl.value = baseUrl + '?menu=Pantone色號表'; break;
         case '4-2': iframeUrl.value = baseUrl + '?menu=交叉查詢區'; break;
         case '5': iframeUrl.value = baseUrl + '?menu=庫存區'; break;
-        case '6': iframeUrl.value = baseUrl + '?menu=採購管理'; break;
-        case '7': iframeUrl.value = baseUrl + '?menu=銷售管理'; break;
-        case '8': iframeUrl.value = baseUrl + '?menu=會計系統'; break;
-        case '9': iframeUrl.value = baseUrl + '?menu=人力資源'; break;
+        case '6': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 採購管理：暫時導向生產單
+        case '7': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 銷售管理：暫時導向生產單
+        case '8': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 會計系統：暫時導向生產單
+        case '9': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 人力資源：暫時導向生產單
         case '10': iframeUrl.value = baseUrl + '?menu=匯入備份'; break;
-        default: iframeUrl.value = baseUrl;
+        default: iframeUrl.value = baseUrl + '?menu=生產單管理';
       }
     };
 
