--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ const Icons = ElementPlusIconsVue;
 
 const app = createApp({
   setup() {
-    const iframeUrl = ref('https://color-powder-app.streamlit.app/?menu=生產單管理');
+    const iframeUrl = ref('https://color-powder-app.streamlit.app/');
     const isCollapsed = ref(false);
 
     const toggleSidebar = () => {
@@ -195,23 +195,8 @@ const app = createApp({
     };
 
     const handleSelect = (index) => {
-      const baseUrl = 'https://color-powder-app.streamlit.app/';
-      switch(index){
-        case '1-1': iframeUrl.value = baseUrl + '?menu=色粉管理'; break;
-        case '2-1': iframeUrl.value = baseUrl + '?menu=客戶名單'; break;
-        case '2-2': iframeUrl.value = baseUrl + '?menu=配方管理'; break;
-        case '3-1': iframeUrl.value = baseUrl + '?menu=生產單管理'; break;
-        case '3-2': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 暫時導向生產單
-        case '4-1': iframeUrl.value = baseUrl + '?menu=Pantone色號表'; break;
-        case '4-2': iframeUrl.value = baseUrl + '?menu=交叉查詢區'; break;
-        case '5': iframeUrl.value = baseUrl + '?menu=庫存區'; break;
-        case '6': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 採購管理：暫時導向生產單
-        case '7': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 銷售管理：暫時導向生產單
-        case '8': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 會計系統：暫時導向生產單
-        case '9': iframeUrl.value = baseUrl + '?menu=生產單管理'; break; // 人力資源：暫時導向生產單
-        case '10': iframeUrl.value = baseUrl + '?menu=匯入備份'; break;
-        default: iframeUrl.value = baseUrl + '?menu=生產單管理';
-      }
+      // 暫時所有選項都載入主頁面，讓使用者在 Streamlit sidebar 中操作
+      iframeUrl.value = 'https://color-powder-app.streamlit.app/';
     };
 
     return { iframeUrl, handleSelect, isCollapsed, toggleSidebar };
